seccion-21/171-ingress-rules/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-deploy
  labels:
    app: ingress-proof
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ingress-proof
  template:
    metadata:
      labels:
        app: ingress-proof
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          command: ['sh', '-c', 'echo VERSION 1.0 desde $HOSTNAME > /usr/share/nginx/html/index.html && nginx -g "daemon off;"']
