seccion-21/171-ingress-rules/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-svc
  labels:
    app: ingress-proof
spec:
  type: ClusterIP
  selector:
    app: ingress-proof
  ports:
    - name: http
      port: 8080
      targetPort: 80
      protocol: TCP
